# unischool

./: .gitignore  SETUP_GUIDE.md  crop_logo.py  index.html  members.html  package-lock.json  package.json  pricing.html  privacy.html  square_icon.py  tailwind.config.js  terms.html  vite.config.js
.agent/workflows/: franchise-launch.md  grants-autopilot.md  legal-work.md  platform-customization.md
app/: index.html
app/assets/: CodeEditor-C3u5e6qH.js  index-D55O_ROf.css
docs/: STYLE_GUIDE.md
js/: auth.js
scripts/: setup-ollama.ps1  sync-workflows.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/automation-sidecar/: executor.js  index.js  package-lock.json  package.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AcademicGoalSurvey.jsx  ActionRecorder.jsx  AdvisorDashboard.jsx  AgentWizard.jsx  AuthScreen.jsx  AutomationPanel.jsx  ChatInterface.jsx  ChatbotBuilder.jsx  CodeEditor.jsx  CommandPalette.jsx  DocBuilderDashboard.jsx  FileExplorer.jsx  FranchiseBilling.jsx  FranchiseOwnerDashboard.jsx  GTMDashboard.jsx  GrantAgentDashboard.jsx  HelpCenter.jsx  MagicLinkAuth.jsx  OnboardingWizard.jsx  ParentDashboard.jsx  PersonalitySelector.jsx  PrivacyBadge.jsx  QuestCard.jsx  SettingsModal.jsx  ShareWorkspaceModal.jsx  SkillTree.jsx  StudentCockpit.jsx  StudentPortfolio.jsx  SuperAdminBilling.jsx  SuperAdminDashboard.jsx  TeamDashboard.jsx  Terminal.jsx  VisualSandbox.jsx
src/config/: documentAgents.js
src/data/: curriculum.json  transfer-pathways.json
src/services/: AnnotationService.js  (+15 more)
(+10 files in other folders)
